// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webpack Integration Tests html-plugin 1`] = `
"var x=1;x=10;var y=2;y=5;
//# sourceMappingURL=file.0ff883d05f62ecabac00.js.map"
`;

exports[`Webpack Integration Tests html-plugin 2`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>Webpack App</title>
  </head>
  <body>
  <script type=\\"text/javascript\\" src=\\"file.0ff883d05f62ecabac00.js\\"></script>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script></body>
</html>
"
`;

exports[`Webpack Integration Tests html-plugin-auto-inject 1`] = `
"var x=1;x=10;var y=2;y=5;
//# sourceMappingURL=file.0ff883d05f62ecabac00.js.map"
`;

exports[`Webpack Integration Tests html-plugin-auto-inject 2`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>Webpack App</title>
  </head>
  <body>
  <script type=\\"text/javascript\\" src=\\"file.0ff883d05f62ecabac00.js\\" async></script><script type=\\"text/javascript\\" src=\\"main.js\\"></script></body>
</html>
"
`;

exports[`Webpack Integration Tests simple 1`] = `
"var x = 1;


/**
 * Redefine \\"x\\"
 * @type {number}
 */
x = 10;

var y = 2;







y = 5;
debugger;
// End of this test file

\\"use strict\\";

module.exports = function isObject(x) {
	return typeof x === \\"object\\" && x !== null;
};
"
`;

exports[`Webpack Integration Tests source-map 1`] = `
"var x = 1;


/**
 * Redefine \\"x\\"
 * @type {number}
 */
x = 10;

var y = 2;







y = 5;
debugger;
// End of this test file
//# sourceMappingURL=file.js.map"
`;

exports[`Webpack Integration Tests source-map-uglify 1`] = `
"var x=1;x=10;var y=2;y=5;
//# sourceMappingURL=file.js.map"
`;

exports[`Webpack Integration Tests source-map-uglify-use-hash 1`] = `
"var x=1;x=10;var y=2;y=5;
//# sourceMappingURL=file.0ff883d05f62ecabac00.js.map"
`;

exports[`Webpack Integration Tests source-map-use-hash 1`] = `
"var x = 1;


/**
 * Redefine \\"x\\"
 * @type {number}
 */
x = 10;

var y = 2;







y = 5;
debugger;
// End of this test file
//# sourceMappingURL=file.0ff883d05f62ecabac00.js.map"
`;

exports[`Webpack Integration Tests uglify 1`] = `"var x=1;x=10;var y=2;y=5;"`;

exports[`Webpack Integration Tests uglify-use-hash 1`] = `"var x=1;x=10;var y=2;y=5;"`;

exports[`Webpack Integration Tests use-hash 1`] = `
"var x = 1;


/**
 * Redefine \\"x\\"
 * @type {number}
 */
x = 10;

var y = 2;







y = 5;
debugger;
// End of this test file
"
`;
